--- a/color/colors.css
+++ b/color/colors.css
@@ -109,27 +109,28 @@ background-image: linear-gradient(top, #262626 0%, #1a1a1a 100%);
 filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#262626', endColorstr='#1a1a1a'); }
 
 .links ul li a, a.more, #comments ul.links li a,
-input[type="submit"], input[type="reset"], input[type="button"] { color:#fefefe; text-shadow: 0 1px 1px #003547;
+input[type="submit"], input[type="reset"], input[type="button"] {
+color:#fefefe; text-shadow: 0 1px 1px rgb(70, 160,115); /*#003547 */
 /* background */
-background: #0093c5;
+background: #80C7A3; /*#0093c5;*/
 /* IE10 */
-background-image: -ms-linear-gradient(top, #0093c5 0%, #0079a2 100%);
+background-image: -ms-linear-gradient(top, #99CC66 0%, #336600 100%); /* #0093c5 0%, #0079a2 100%); */
 /* Mozilla Firefox */
-background-image: -moz-linear-gradient(top, #0093c5 0%, #0079a2 100%);
+background-image: -moz-linear-gradient(top, #99CC66 0%, #336600 100%);
 /* Opera */
-background-image: -o-linear-gradient(top, #0093c5 0%, #0079a2 100%);
+background-image: -o-linear-gradient(top, #99CC66 0%, #336600 100%);
 /* Webkit (Safari/Chrome 10) */
-background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #0093c5), color-stop(1, #0079a2));
+background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #99CC66), color-stop(1, #336600));
 /* Webkit (Chrome 11+) */
-background-image: -webkit-linear-gradient(top, #0093c5 0%, #0079a2 100%);
+background-image: -webkit-linear-gradient(top, #99CC66 0%, #336600 100%);
 /* Proposed W3C Markup */
-background-image: linear-gradient(top, #0093c5 0%, #0079a2 100%);
+background-image: linear-gradient(top #99CC66 0%, #336600 100%);
 /* IE6-9 */
-filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#0093c5', endColorstr='#0079a2');
+filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='rgb(70,160,85 0%', endColorstr='rgb(70,160,85');
 /* shadow */
 -webkit-box-shadow: 0px 1px 2px #939da2; -moz-box-shadow: 0px 1px 2px #939da2; box-shadow: 0px 1px 2px #939da2; }
 
 .links ul li a:hover, a.more:hover, #comments ul.links li a:hover,
-input[type="submit"]:hover, input[type="reset"]:hover, input[type="button"]:hover { background: #008ab8; }
+input[type="submit"]:hover, input[type="reset"]:hover, input[type="button"]:hover { background:#336600;} /* #008ab8; } */
 
 .region-sidebar-first .block .content, .region-sidebar-second .block .content { background:#fdfdfd; }
