--- a/color/colors.css
+++ b/color/colors.css
@@ -39,7 +39,10 @@ background-image: linear-gradient(top, #2f2f2f 0%, #1b1a1a 100%);
 /* IE6-9 */
 filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#2f2f2f', endColorstr='#1b1a1a'); }
 
-#header-menu { background: #222222; border-top:1px solid #353535; border-bottom:1px solid #353535; /* background-color: #80C7A3;*/}
+#header-menu { background: #222; border-top:1px solid #353535; border-bottom:1px solid #353535; }
+
+
+
 
 #header-menu ul.menu li.expanded ul.menu, #navigation .block-superfish ul.sf-menu li, #navigation .block-superfish ul.sf-menu li li a { background: #222222; }
 
@@ -108,29 +111,24 @@ background-image: linear-gradient(top, #262626 0%, #1a1a1a 100%);
 /* IE6-9 */
 filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#262626', endColorstr='#1a1a1a'); }
 
+
 .links ul li a, a.more, #comments ul.links li a,
 input[type="submit"], input[type="reset"], input[type="button"] {
-color:#fefefe; text-shadow: 0 1px 1px rgb(70, 160,115); /*#003547 */
-/* background */
-background: #80C7A3; /*#0093c5;*/
-/* IE10 */
-background-image: -ms-linear-gradient(top, #99CC66 0%, #336600 100%); /* #0093c5 0%, #0079a2 100%); */
-/* Mozilla Firefox */
-background-image: -moz-linear-gradient(top, #99CC66 0%, #336600 100%);
-/* Opera */
-background-image: -o-linear-gradient(top, #99CC66 0%, #336600 100%);
-/* Webkit (Safari/Chrome 10) */
-background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #99CC66), color-stop(1, #336600));
-/* Webkit (Chrome 11+) */
-background-image: -webkit-linear-gradient(top, #99CC66 0%, #336600 100%);
-/* Proposed W3C Markup */
-background-image: linear-gradient(top #99CC66 0%, #336600 100%);
-/* IE6-9 */
-filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='rgb(70,160,85 0%', endColorstr='rgb(70,160,85');
-/* shadow */
--webkit-box-shadow: 0px 1px 2px #939da2; -moz-box-shadow: 0px 1px 2px #939da2; box-shadow: 0px 1px 2px #939da2; }
+background: #b5f2bc; /* Old browsers */
+background: -moz-linear-gradient(top,  #b5f2bc 15%, #80c7a3 72%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(15%,#b5f2bc), color-stop(72%,#80c7a3)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  #b5f2bc 15%,#80c7a3 72%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  #b5f2bc 15%,#80c7a3 72%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  #b5f2bc 15%,#80c7a3 72%); /* IE10+ */
+background: linear-gradient(to bottom,  #b5f2bc 15%,#80c7a3 72%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b5f2bc', endColorstr='#80c7a3',GradientType=0 ); /* IE6-9 */
+
+}
+
 
 .links ul li a:hover, a.more:hover, #comments ul.links li a:hover,
-input[type="submit"]:hover, input[type="reset"]:hover, input[type="button"]:hover { background:#336600;} /* #008ab8; } */
+input[type="submit"]:hover, input[type="reset"]:hover, input[type="button"]:hover {
+	background:#80C7A3;} 
+
 
 .region-sidebar-first .block .content, .region-sidebar-second .block .content { background:#fdfdfd; }
